# rdst

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PKG-INFO  TODO.md  mcp_server.py  pyproject.toml  rdst.py
.buildkite-artifacts/rdst-web/: rdst-web-metadata.json
docs/: GITHUB_PUBLIC_RELEASE.md  RDST_WEB_RELEASE_PIPELINE.md
keyservice/: .dev.vars.example  .gitignore  README.md  pyproject.toml  schema.sql  wrangler.toml
keyservice/src/: index.py
lib/: db_connection.py  top_display.py
lib/agent/: __init__.py  chat_agent.py  chat_tools.py  config.py  conversation.py  http_server.py  manager.py  runtime.py
lib/api/: __init__.py  app.py  models.py
lib/cli/: agent_command.py  analyze_command.py  analyze_renderer.py  annotate_renderer.py  ast_extractor.py  cache_commands.py  cache_deploy.py  configuration_wizard.py  configure_renderer.py  guard_command.py  help_command.py  init_command.py  interactive_mode.py  js_extractor.py  output_formatter.py  parameter_prompt.py  parser_data.py  query_command.py  query_renderer.py  rdst_cli.py  readyset_setup.py  scan_command.py  scan_context.py  scan_corpus.py  scan_index_check.py  schema_command.py  schema_renderer.py  slack_command.py  snippet_cache.py  top.py  top_renderer.py
lib/data_manager_service/: data_manager_service_command_sets.py
lib/data_structures/: semantic_layer.py
lib/deploy/: __init__.py  kubernetes.py  local_docker.py  local_systemd.py  remote.py  script_generator.py
lib/engines/: __init__.py
lib/functions/: __init__.py  explain_analysis.py  llm_analysis.py  readyset_container.py  readyset_explain_cache.py  result_display.py  schema_collector.py  schema_from_yaml.py  shallow_analysis.py  sql_generation.py  target_setup.py  validation.py  workflow_integration.py
lib/guard/: __init__.py  checker.py  config.py  intent.py  manager.py  masking.py
lib/llm_manager/: base.py  claude_provider.py  key_resolution.py  llm_manager.py  ollama_provider.py  trial_display.py
lib/prompts/: analyze_prompts.py  ask_prompts.py
lib/query_registry/: query_registry.py  sql_normalizer.py
lib/semantic_layer/: annotate_wizard.py  data_profiler.py  guided_annotator.py  introspector.py  pattern_detector.py
lib/services/: AGENTS.md  __init__.py  analyze_service.py  annotate_service.py  anthropic_env.py  ask_service.py  configure_service.py  env_requirements_service.py  init_service.py  interactive_service.py  password_resolver.py  query_service.py  types.py  (+4 more)
tests/: conftest.py  requirements.txt
(+148 files in other folders)
